# libhybris

./: .gitignore  .gitlab-ci.yml
.circleci/: config.yml
compat/apphwc/: Android.bp  hwc2_compatibility_layer.cpp
compat/hwc2/: AidlComposerHal.cpp  AidlComposerHal.h  Android.mk  ComposerHal.h  HWC2.cpp  HWC2.h  HidlComposerHal.cpp  HidlComposerHal.h  hwc2_compatibility_layer.cpp
compat/media/: Android.mk  media_recorder.cpp
compat/ui/: ui_compatibility_layer.cpp
debian/: changelog  clear_symbols.sh  control  control.in  copyright  libandroid-properties-dev.install  libhybris-dev.install  libhybris-test.install  libhybris-vulkan.install  libhybris-vulkan.postinst  libhybris-vulkan.postrm  libhybris.install  libhybris.install.in  libhybris.links  libhybris.postinst.in  libmedia-dev.install  not-installed  rules
debian/patches/: 0001-Temporary-patch-to-make-libhybris-tell-it-supports-g.patch  001-workaround-hwc-bug.patch  egl_allow_to_override_egl_platform_dir.patch  env_hybris_ld_shim_libs.patch  series
hybris/: configure.ac
hybris/common/: hooks.c
hybris/common/n/: linker.cpp
hybris/common/q/: Makefile.am  linker.cpp  linker_config.cpp  linker_memory.cpp  linker_soinfo.h  linker_tls.cpp
hybris/egl/: egl.c  eglhybris.h  ws.c  ws.h
hybris/egl/glvnd/: eglglvnd.cpp
hybris/gralloc/: gralloc.c
hybris/include/: Makefile.am
hybris/opencl/: Makefile.am  libhybris.icd.in  opencl.c
hybris/tests/: Makefile.am  test_audio.c  test_common.cpp  test_opencl.c  test_vulkan.cpp
hybris/vulkan/: vulkan.c
utils/: generate_wrapper_macros.py
(+6 files in other folders)
